-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.7.0b1
=======
- Detailed descriptions of each change below are 
  described at:
  http://www.sqlalchemy.org/trac/wiki/07Migration

- general
  - New event system, supercedes all extensions, listeners,
    etc.  [ticket:1902]

  - Logging enhancements
    [ticket:1926]

  - Setup no longer installs a Nose plugin
    [ticket:1949]

- orm
  - More succinct form of query.join(target, onclause)
    [ticket:1923]

  - Hybrid Attributes, implements/supercedes synonym()
    [ticket:1903]

  - Rewrite of composites [ticket:2008]

  - Mutation Event Extension, supercedes "mutable=True"

  - PickleType and ARRAY mutability turned off by default
     [ticket:1980]

  - Simplified polymorphic_on assignment
    [ticket:1895]

  - Flushing of Orphans that have no parent is allowed
    [ticket:1912]

  - Adjusted flush accounting step to occur before
    the commit in the case of autocommit=True.  This allows
    autocommit=True to work appropriately with 
    expire_on_commit=True, and also allows post-flush session
    hooks to operate in the same transactional context 
    as when autocommit=False.  [ticket:2041]

  - Warnings generated when collection members, scalar referents 
    not part of the flush
    [ticket:1973]

  - Non-`Table`-derived constructs can be mapped
    [ticket:1876]

  - Tuple label names in Query Improved
    [ticket:1942]

  - Mapped column attributes reference the most specific 
    column first
    [ticket:1892]

  - Mapping to joins with two or more same-named columns 
    requires explicit declaration
    [ticket:1896]

  - Mapper requires that polymorphic_on column be present 
    in the mapped selectable
    [ticket:1875]

  - compile_mappers() renamed configure_mappers(), simplified 
    configuration internals
    [ticket:1966]

  - the aliased() function, if passed a SQL FromClause element
    (i.e. not a mapped class), will return element.alias() 